# code-sandbox

interview-tasks/2026/ant-movement/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  start.sh
interview-tasks/2026/ant-movement/docker/: .dockerignore  Dockerfile  docker-compose.yml
interview-tasks/2026/ant-movement/http-server/: solve.cgi
interview-tasks/2026/ant-movement/source/: AntMatrix.cpp  AntMatrix.h  AntUtils.cpp  AntUtils.h  CanEnterCell.h  Config.cpp  Config.h
interview-tasks/2026/ant-movement/source/CanEnterCell/: CanEnterCell.cpp  CompareSumOfAbsNumbersWithLimit.cpp  CompareSumOfDigitsWithLimit.cpp  CompareSumOfSquaredNumbersWithLimit.cpp
other/ugar/pathologic-haruspex-diary/: README.md  main.py
university/cellular-automaton/: Makefile
university/cellular-automaton/docker/: Dockerfile  docker-compose.yml
university/cellular-automaton/source/automaton/: CMakeLists.txt  automaton.cpp  automaton.h  interface.cpp  interface.h
university/cellular-automaton/source/flask/: automaton_wrapper.py  main.py  requirements.txt  solver_wrapper.py
university/cellular-automaton/source/flask/templates/: index.html
university/cellular-automaton/source/solver/: CMakeLists.txt  rules.cpp  rules.h  solver.cpp  solver.h
university/oavi/1laba/: CMakeLists.txt  README.md  main.cpp
university/oavi/1laba/source/: bmp_format.h  bmp_image.cpp  bmp_image.h
university/oavi/2laba/: CMakeLists.txt  README.md  main.cpp
university/oavi/3laba/: .gitignore  Makefile  README.md  main.cpp
university/oavi/4laba/: CMakeLists.txt  README.md  main.cpp
